[package]
name = "atcoder"
version = "0.1.0"
authors = ["Kitamura <ymyk6602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "arc005",
    "abc023",
    "abc176",
    "abc178",
    "abc206",
    "abc238",
    "typical",
    "dp"
]
