[package]
name = "dp"
version = "0.1.0"
authors = ["Kitamura <ymyk6602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "dp_a"
path = "src/bin/a.rs"

[[bin]]
name = "dp_b"
path = "src/bin/b.rs"

[[bin]]
name = "dp_c"
path = "src/bin/c.rs"

[[bin]]
name = "dp_d"
path = "src/bin/d.rs"